fixed various things, shifting page orders in admin, breadcrumb links were pointing to the wrong place, etc.

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -122,3 +122,6 @@ ul.grid li.item img:hover {
 ul.grid li.item.active img {
   border-color: #0084FF;
 }
+#tree li li:hover {
+  background-color: #eee;
+}
